# QT5_SmartFarm

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  mqttclient.cpp  mqttclient.h
include/: mainwindow.h
include/network/: mqttclient.h
resources/: resources.qrc
resources/styles/: style.qss
src/: main.cpp  mainwindow.cpp  mainwindow.ui
src/drivers/: gpio.cpp  light_sensor.cpp  temperature_humidity_sensor.cpp
src/network/: mqttclient.cpp
